[workspace]
resolver = "2"
members = ["crates/runtime/*"]
default-members = ["crates/runtime/coven"]

[workspace.package]
publish = false
authors = ["Kathryn Long <squeeself@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.0.0"

[workspace.lints.rust]
missing_docs = "warn"
